--- a/test.tex
+++ b/test.tex
@@ -6,20 +6,14 @@
 \parindent=0pt
 
 \section{fig1.pdf}
-
-\fbox{\includegraphics[page=1,clip]{fig1.pdf}}
-
-\fbox{\includegraphics[page=2,clip]{fig1.pdf}}
-
+\fbox{\includegraphics[page=1,clip]{fig1.pdf}}\par
+\fbox{\includegraphics[page=2,clip]{fig1.pdf}}\par
 \fbox{\includegraphics[page=3,clip]{fig1.pdf}}
 
 \newpage
 
 \section{fig2.ai}
-
-\fbox{\includegraphics[page=1,clip]{fig2.ai}}
-
-\fbox{\includegraphics[page=2,clip]{fig2.ai}}
-
+\fbox{\includegraphics[page=1,clip]{fig2.ai}}\par
+\fbox{\includegraphics[page=2,clip]{fig2.ai}}\par
 \fbox{\includegraphics[page=3,clip]{fig2.ai}}
 \end{document}
